--- a/example-app/.project
+++ b/example-app/.project
@@ -3,6 +3,9 @@
 	<name>example-app</name>
 	<comment></comment>
 	<projects>
+		<project>addons</project>
+		<project>libs</project>
+		<project>openFrameworks</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
